--- a/index.html
+++ b/index.html
@@ -3,8 +3,40 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Yuri Engenharia</title>
+
+    <!-- Arquivo CSS desta página -->
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
   <body>
-
+    <!-- 
+      Seção Nossos Projetos
+      Onde dever ser exibido projetos da empresa foi utilizdo 
+      o layout Grid do Brootstrap junto com CSS.
+    -->
+    <div class="container">
+      <p class="nossos-projetos-titulo">Nossos Projetos</p>
+      <div class="row">
+        <div class="nossos-projetos-celulas col-sm">
+          <img class="nossos-projetos-imagem" src="img/img0.jpg"/>
+          <p class="nossos-projetos-titulo">Casa de Alto Padrão</p>
+        </div>
+        <div class="nossos-projetos-celulas col-sm">
+          <img class="nossos-projetos-imagem" src="img/img1.jpg"/>
+          <p class="nossos-projetos-titulo">Alpha Vile House</p>
+        </div>
+        <div class="nossos-projetos-celulas col-sm">
+          <img class="nossos-projetos-imagem" src="img/img2.jpg"/>
+          <p class="nossos-projetos-titulo">Cidade Alpha</p>
+        </div>
+        <div class="nossos-projetos-celulas col-sm">
+          <img class="nossos-projetos-imagem" src="img/img3.jpg"/>
+          <p class="nossos-projetos-titulo">Serra da Guaramiranga</p>
+        </div>
+      </div>
+    </div>
+    <!-- Fim da seção Nossos Projetos -->
   </body>
 </html>
