--- a/index.html
+++ b/index.html
@@ -12,27 +12,29 @@
   </head>
   <body>
     <!-- Início do Carousel -->
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="img/img4.jpg" alt="First slide">
+    <section class="secao">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100 carrossel-imagem" src="img/img4.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 carrossel-imagem" src="img/img5.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 carrossel-imagem" src="img/img6.jpg" alt="Third slide">
+          </div>
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/img5.jpg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/img6.jpg" alt="Third slide">
-        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
+    </section>
     <!-- Fim do Carousel -->
 
     <!-- 
@@ -40,28 +42,46 @@
       Onde dever ser exibido projetos da empresa foi utilizdo 
       o layout Grid do Brootstrap junto com CSS.
     -->
-    <div class="container">
-      <p class="nossos-projetos-titulo">Nossos Projetos</p>
-      <div class="row">
-        <div class="nossos-projetos-celulas col-sm">
-          <img class="nossos-projetos-imagem" src="img/img0.jpg"/>
-          <p class="nossos-projetos-titulo">Casa de Alto Padrão</p>
-        </div>
-        <div class="nossos-projetos-celulas col-sm">
-          <img class="nossos-projetos-imagem" src="img/img1.jpg"/>
-          <p class="nossos-projetos-titulo">Alpha Vile House</p>
-        </div>
-        <div class="nossos-projetos-celulas col-sm">
-          <img class="nossos-projetos-imagem" src="img/img2.jpg"/>
-          <p class="nossos-projetos-titulo">Cidade Alpha</p>
-        </div>
-        <div class="nossos-projetos-celulas col-sm">
-          <img class="nossos-projetos-imagem" src="img/img3.jpg"/>
-          <p class="nossos-projetos-titulo">Serra da Guaramiranga</p>
+    <section class="secao">
+      <div class="container">
+        <p class="nossos-projetos-titulo">Nossos Projetos</p>
+        <div class="row">
+          <div class="nossos-projetos-celulas col-sm">
+            <img class="nossos-projetos-imagem" src="img/img0.jpg"/>
+            <p class="nossos-projetos-titulo">Casa de Alto Padrão</p>
+          </div>
+          <div class="nossos-projetos-celulas col-sm">
+            <img class="nossos-projetos-imagem" src="img/img1.jpg"/>
+            <p class="nossos-projetos-titulo">Alpha Vile House</p>
+          </div>
+          <div class="nossos-projetos-celulas col-sm">
+            <img class="nossos-projetos-imagem" src="img/img2.jpg"/>
+            <p class="nossos-projetos-titulo">Cidade Alpha</p>
+          </div>
+          <div class="nossos-projetos-celulas col-sm">
+            <img class="nossos-projetos-imagem" src="img/img3.jpg"/>
+            <p class="nossos-projetos-titulo">Serra da Guaramiranga</p>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- Fim da seção Nossos Projetos -->
+
+    <!-- Início da seção Sliders  -->
+    <section class="secao principal">
+      <div class="container__caixa">
+          <h1 class="caixa__titulo">Yuri Engenharia</h1>
+          <p class="caixa__paragrafo">Realize a obra dos seus sonhos com a melhor equipe possível! Construímos não só casas, mas também sonhos. Trabalhamos com Projetos, acompanhamentos, execuções e diversos outros serviços.</p>
+          <a href="#" class="caixa__botao">Solicite seu orçamento</a>
+      </div>
+    </section>
+    <section class="secao secundario">
+        <div class="container__caixa">
+            <h1 class="caixa__titulo">Construir Sonhos e edificar histórias!</h1>
+            <p class="caixa__paragrafo">Referência há vários anos no mercado de alto padrão, a Yuri Engenharia possui um catálogo variado de serviços e diversos clientes satisfeitos que tiveram sua vida transformada como resultado da excelência em todos essses anos!</p>
+        </div>
+    </section>
+    <!-- Fim da seção Sliders -->
     
     <!-- Bootstrap JavaScript -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
