--- a/index.html
+++ b/index.html
@@ -10,19 +10,64 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
+  <header>
+    <!-- Início NaveBar Bootstrap -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand navbar-logo" href="#">Yuri Engenharia</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contratar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">História</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- Fim NaveBar Bootstrap -->
+  </header>
   <body>
     <!-- Início do Carousel -->
     <section class="secao">
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100 carrossel-imagem" src="img/img4.jpg" alt="First slide">
+            <div class="carrossel-imagem carrossel-slide-1">
+              <div class="carrossel-caixa">
+                <h1 class="carrossel-titulo">TRADIÇÃO</h1>
+                <!--
+                <p class="carrossel-paragrafo">A mais de 80 anos construindo casa em todo o Brasil. Foi a primeira empresa a empregar construção de casas com impressoras 3D no Norte e Nordeste.</p>
+                -->
+              </div>
+            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100 carrossel-imagem" src="img/img5.jpg" alt="Second slide">
+            <div class="carrossel-imagem carrossel-slide-2">
+              <div class="carrossel-caixa">
+                <h1 class="carrossel-titulo">PROFISSIONALISMO</h1>
+                <!--
+                <p class="carrossel-paragrafo">Sentimos orgulho em dizer que somos a empresa com menos retroatividade do mercado. Tratamos nossos funcionários com respeito e é assim que oferecemos o melhor para você.</p>
+                -->
+              </div>
+            </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100 carrossel-imagem" src="img/img6.jpg" alt="Third slide">
+            <div class="carrossel-imagem carrossel-slide-3">
+              <div class="carrossel-caixa">
+                <h1 class="carrossel-titulo">INOVAÇÃO</h1>
+                <!--
+                <p class="carrossel-paragrafo">Fomos a primeira empresa no Brasil a trabalhar com visão computacional em nossos projetos, assim como IoT e casas inteligentes. Somos referência em construção de Tecs e Laboratórios. Não é atoa que fizemos parte da construção do LHC.
+                -->
+                </p>
+              </div>
+            </div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -52,7 +97,7 @@
           </div>
           <div class="nossos-projetos-celulas col-sm">
             <img class="nossos-projetos-imagem" src="img/img1.jpg"/>
-            <p class="nossos-projetos-titulo">Alpha Vile House</p>
+            <p class="nossos-projetos-titulo">Alpha Ville House</p>
           </div>
           <div class="nossos-projetos-celulas col-sm">
             <img class="nossos-projetos-imagem" src="img/img2.jpg"/>
@@ -67,7 +112,7 @@
     </section>
     <!-- Fim da seção Nossos Projetos -->
 
-    <!-- Início da seção Sliders  -->
+    <!-- Início parte 1 seção Sliders -->
     <section class="secao principal">
       <div class="container__caixa">
           <h1 class="caixa__titulo">Yuri Engenharia</h1>
@@ -75,13 +120,50 @@
           <a href="#" class="caixa__botao">Solicite seu orçamento</a>
       </div>
     </section>
+    <!-- Fim parte 1 seção Sliders -->
+
+    <!-- 
+      Seção Como Trabalhamos
+      Onde dever ser exibido as etapas para execução
+      de um projeto.
+    -->
+    <section class="secao">
+      <div class="container">
+        <p class="como-trabalhamos-titulo">Como Trabalhamos</p>
+        <div class="row">
+          <div class="como-trabalhamos-celulas col-sm">
+            <img class="como-trabalhamos-imagem" src="img/img9.jpg"/>
+            <p class="como-trabalhamos-titulo">Orçamento</p>
+            <p class="como-trabalhamos-texto">Inicialmente vamos dar toda a atenção à sua situação financeira.</p>
+          </div>
+          <div class="como-trabalhamos-celulas col-sm">
+            <img class="como-trabalhamos-imagem" src="img/img10.jpg"/>
+            <p class="como-trabalhamos-titulo">Projeto</p>
+            <p class="como-trabalhamos-texto">Focamos em construir o melhor para nossos clientes, por esse motivo essa é a etapa que mais demanda tempo.</p>
+          </div>
+          <div class="como-trabalhamos-celulas col-sm">
+            <img class="como-trabalhamos-imagem" src="img/img11.jpg"/>
+            <p class="como-trabalhamos-titulo">Execução</p>
+            <p class="como-trabalhamos-texto">Somos líderes em tempo de entrega, empregamos profissionais qualificados.</p>
+          </div>
+          <div class="como-trabalhamos-celulas col-sm">
+            <img class="como-trabalhamos-imagem" src="img/img12.jpg"/>
+            <p class="como-trabalhamos-titulo">Entrega</p>
+            <p class="como-trabalhamos-texto">Sempre temos em mente a sua felicidade, por isso a entrega final também é feita de forma humanizada.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Fim da seção Como Trabalhamos -->
+
+    <!-- Início parte 2 seção Sliders -->
     <section class="secao secundario">
         <div class="container__caixa">
-            <h1 class="caixa__titulo">Construir Sonhos e edificar histórias!</h1>
-            <p class="caixa__paragrafo">Referência há vários anos no mercado de alto padrão, a Yuri Engenharia possui um catálogo variado de serviços e diversos clientes satisfeitos que tiveram sua vida transformada como resultado da excelência em todos essses anos!</p>
+            <h1 class="caixa__titulo">Construir onhos e edificar histórias!</h1>
+            <p class="caixa__paragrafo">Referência há vários anos no mercado de alto padrão, a Yuri Engenharia possui um catálogo variado de serviços e diversos clientes satisfeitos que tiveram sua vida transformada como resultado da excelência em todos esses anos!</p>
         </div>
     </section>
-    <!-- Fim da seção Sliders -->
+    <!-- Fim parte 2 seção Sliders -->
     
     <!-- Bootstrap JavaScript -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
