Melhorando a seção carrossel e a responsividade do site.

--- a/index.html
+++ b/index.html
@@ -39,34 +39,24 @@
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="carrossel-imagem carrossel-slide-1">
-              <div class="carrossel-caixa">
-                <h1 class="carrossel-titulo">TRADIÇÃO</h1>
-                <!--
-                <p class="carrossel-paragrafo">A mais de 80 anos construindo casa em todo o Brasil. Foi a primeira empresa a empregar construção de casas com impressoras 3D no Norte e Nordeste.</p>
-                -->
-              </div>
+            <img class="d-block w-100" src="img/img4.jpg" alt="First slide"/>
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="carrossel-titulo">TRADIÇÃO</h5>
+              <p class="carrossel-paragrafo">A mais de 80 anos construindo casa em todo o Brasil. Foi a primeira empresa a empregar construção de casas com impressoras 3D no Norte e Nordeste.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <div class="carrossel-imagem carrossel-slide-2">
-              <div class="carrossel-caixa">
-                <h1 class="carrossel-titulo">PROFISSIONALISMO</h1>
-                <!--
-                <p class="carrossel-paragrafo">Sentimos orgulho em dizer que somos a empresa com menos retroatividade do mercado. Tratamos nossos funcionários com respeito e é assim que oferecemos o melhor para você.</p>
-                -->
-              </div>
+            <img class="d-block w-100" src="img/img5.jpg" alt="Second slide"/>
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="carrossel-titulo">PROFISSIONALISMO</h5>
+              <p class="carrossel-paragrafo">Sentimos orgulho em dizer que somos a empresa com menos retroatividade do mercado. Tratamos nossos funcionários com respeito e é assim que oferecemos o melhor para você.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <div class="carrossel-imagem carrossel-slide-3">
-              <div class="carrossel-caixa">
-                <h1 class="carrossel-titulo">INOVAÇÃO</h1>
-                <!--
-                <p class="carrossel-paragrafo">Fomos a primeira empresa no Brasil a trabalhar com visão computacional em nossos projetos, assim como IoT e casas inteligentes. Somos referência em construção de Tecs e Laboratórios. Não é atoa que fizemos parte da construção do LHC.
-                -->
-                </p>
-              </div>
+            <img class="d-block w-100" src="img/img6.jpg" alt="Third slide"/>
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="carrossel-titulo">FINOVAÇÃO</h5>
+              <p class="carrossel-paragrafo">Fomos a primeira empresa no Brasil a trabalhar com visão computacional em nossos projetos, assim como IoT e casas inteligentes. Somos referência em construção de Tecs e Laboratórios. Não é atoa que fizemos parte da construção do LHC.</p>
             </div>
           </div>
         </div>
