Trocando imagens do carrossel, melhorando a responsividade dos Sliders

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="carousel-item">
             <img class="d-block w-100" src="img/img6.jpg" alt="Third slide"/>
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="carrossel-titulo">FINOVAÇÃO</h5>
+              <h5 class="carrossel-titulo">INOVAÇÃO</h5>
               <p class="carrossel-paragrafo">Fomos a primeira empresa no Brasil a trabalhar com visão computacional em nossos projetos, assim como IoT e casas inteligentes. Somos referência em construção de Tecs e Laboratórios. Não é atoa que fizemos parte da construção do LHC.</p>
             </div>
           </div>
