--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Yuri Engenharia</title>
+    <!-- Icones das redes sociais -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Arquivo CSS desta página -->
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -164,5 +166,76 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    
+    <!-- Footer (inicio)-->
+    <footer>
+      <!-- Logo -->
+      <div id="footer_conteudo">
+        <div id="footer_contatos">
+          <h1>Yuri Engenharia</h1>
+          <p>Construindo o futuro com excelência.</p>
+          <!-- Redes -->
+          <div id="footer_redes">
+            <a href="#" class="footer-link" id="instagram">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#" class="footer-link" id="facebook">
+              <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="#" class="footer-link" id="whatsapp">
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
+          </div>
+        </div>
+        <!-- SAC e produtos -->
+        <ul class="footer_lista">
+          <li>
+            <h3 class="footer_titulo">Fale Conosco</h3>
+          </li>
+          <li>
+            <a href="#" class="footer_link">SAC</a>
+          </li>
+          <li>
+            <a href="#" class="footer_link">E-mail</a>
+          </li>
+          <li>
+            <a href="#" class="footer_link">Perguntas Frequentes</a>
+          </li>
+        </ul>
+
+        <ul class="footer_lista">
+          <li>
+            <h3 class="footer_titulo">Produtos</h3>
+          </li>
+          <li>
+            <a href="#" class="footer_link">Pessoal</a>
+          </li>
+          <li>
+            <a href="#" class="footer_link">Empresarial</a>
+          </li>
+        </ul>
+        <!-- Newsletter -->
+        <div id="footer_inscreva-se">
+          <h3 class="footer_titulo">Newsletter</h3>
+
+          <p>
+            Cadastre seu e-mail para receber atualizações e notícias:
+          </p>
+
+          <div id="input_group">
+            <input type="email" id="email">
+            <button>
+              <i class="fa-regular fa-envelope"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- Copyright -->
+      <div id="footer_copyright">
+        &#169
+        2023 todos os direitos reservados.
+      </div>
+    </footer>
+    <!-- Footer (fim)-->
   </body>
 </html>
