--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <header>
     <!-- Início NaveBar Bootstrap -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light barra-de-navegacao">
       <a class="navbar-brand navbar-logo" href="#">Yuri Engenharia</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,21 +41,21 @@
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/img4.jpg" alt="First slide"/>
+            <img class="d-block w-100 carrossel-imagem" src="img/img4.jpg" alt="First slide"/>
             <div class="carousel-caption d-none d-md-block">
               <h5 class="carrossel-titulo">TRADIÇÃO</h5>
               <p class="carrossel-paragrafo">A mais de 80 anos construindo casa em todo o Brasil. Foi a primeira empresa a empregar construção de casas com impressoras 3D no Norte e Nordeste.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/img5.jpg" alt="Second slide"/>
+            <img class="d-block w-100 carrossel-imagem" src="img/img5.jpg" alt="Second slide"/>
             <div class="carousel-caption d-none d-md-block">
               <h5 class="carrossel-titulo">PROFISSIONALISMO</h5>
               <p class="carrossel-paragrafo">Sentimos orgulho em dizer que somos a empresa com menos retroatividade do mercado. Tratamos nossos funcionários com respeito e é assim que oferecemos o melhor para você.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/img6.jpg" alt="Third slide"/>
+            <img class="d-block w-100 carrossel-imagem" src="img/img6.jpg" alt="Third slide"/>
             <div class="carousel-caption d-none d-md-block">
               <h5 class="carrossel-titulo">INOVAÇÃO</h5>
               <p class="carrossel-paragrafo">Fomos a primeira empresa no Brasil a trabalhar com visão computacional em nossos projetos, assim como IoT e casas inteligentes. Somos referência em construção de Tecs e Laboratórios. Não é atoa que fizemos parte da construção do LHC.</p>
@@ -172,7 +172,7 @@
       <!-- Logo -->
       <div id="footer_conteudo">
         <div id="footer_contatos">
-          <h1>Yuri Engenharia</h1>
+          <h1 class="footer-logo">Yuri Engenharia</h1>
           <p>Construindo o futuro com excelência.</p>
           <!-- Redes -->
           <div id="footer_redes">
